# alak

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .travis.yml  AGENTS.md  AI_FIRST.md  BENCHMARK_REPORT.md  BENCHMARK_REPORT.ru.md  CHANGELOG  CHECK.md  CLAUDE.md  CONTRIBUTING.md  DIGEST.md  GEMINI.md  HANDOFF.md  LICENSE  PACKAGE_CREATION_GUIDE.md  PHASE2_AUDIT.md  PHILOSOPHY.RU.md  PHILOSOPHY.md  README.md  ROLLDOWN_DESIGN.md  TODO.md  architecture.yaml  build.md  bunfig.toml  jest.config.js  nodemon.json  package-lock.json  package.json  playwright.config.simple.ts  playwright.config.ts  pnpm-lock.yaml  rollup.config.js  run.js  sonnets  sonnets.txt  stress-summary-2026-04-20.md  stress.md  (+2 more)
.claude/: rules.md  settings.local.json
atom/: core.d.ts  core.js  create.d.ts  create.js  handlers.d.ts  handlers.js  index.d.ts  index.js  state.d.ts  state.js  utils.d.ts  utils.js
benchmark/: index.ts
bun-results/: results_2025-11-01_12-22-19.json  results_2025-11-01_12-22-19.md  results_2025-11-01_12-25-56.json  results_2025-11-01_12-25-56.md  results_2025-11-01_12-26-02.json  results_2025-11-01_12-26-02.md  results_2025-11-01_12-45-24.json  results_2025-11-01_12-45-24.md  results_2025-11-01_12-47-28.json  results_2025-11-01_12-47-28.md  results_2025-11-01_12-48-05.json  results_2025-11-01_12-48-05.md  results_2025-11-01_12-50-14.json  results_2025-11-01_12-50-14.md  results_2025-11-01_12-50-17.json  results_2025-11-01_12-50-17.md  results_2025-11-01_12-51-05.json  results_2025-11-01_12-51-05.md  results_2025-11-01_12-55-42.json  results_2025-11-01_12-55-42.md  results_2025-11-01_12-55-45.json  results_2025-11-01_12-55-45.md  results_2025-11-01_15-10-22.json  results_2025-11-01_15-10-22.md  results_2025-11-01_15-12-09.json  results_2025-11-01_15-12-09.md
coverage/: alaq.txt  atom.txt  (+3 more)
crates/alaq-graph-axum-rt/: Cargo.toml
crates/alaq-graph-axum-rt/src/: context.rs  error.rs  lib.rs
crates/alaq-graph-tauri-rt/: Cargo.toml
crates/alaq-graph-tauri-rt/src/: error.rs  lib.rs
crates/alaq-graph-tauri-rt/tests/: smoke_belladonna.rs
crates/alaq-graph-zenoh-rt/: Cargo.toml  README.md
crates/alaq-graph-zenoh-rt/src/: lib.rs
crates/alaq-link-http-client/: Cargo.toml
crates/alaq-link-http-client/src/: lib.rs
crates/alaq-link-http-client/tests/: integration.rs
(+507 files in other folders)
