[package]
name = "alaq-graph-axum-rt"
version = "0.1.0"
edition = "2021"
description = "Runtime support for @alaq/graph-axum generated code (ActionContext, HandlerError)."
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
