[package]
name = "alaq-graph-zenoh-rt"
version = "0.1.0"
edition = "2021"
description = "Runtime support for @alaq/graph-zenoh generated code (composite Automerge CRDT documents). API contract v0.1 — method bodies are unimplemented!() until the companion implementation lands."
license = "Apache-2.0"

[dependencies]
automerge = "=0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "1"
