[package]
name = "alaq-link-http-client"
version = "6.0.0-alpha.0"
edition = "2021"
authors = ["Gleb Panteleev <panteleew@gleb.pw>"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }
